<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomNavigationView"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_gravity="bottom"
    android:background="@color/darkBrown">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:id="@+id/HomeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageHome"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/btn_home" />

                <TextView
                    android:id="@+id/textHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/nav_home"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cartBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagecart"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/cart_icon" />

                <TextView
                    android:id="@+id/textcart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/nav_cart"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favoriteBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagelove"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/favorite_icon" />

                <TextView
                    android:id="@+id/textlove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/nav_favorite"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/orderBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageorder"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/order_icon" />

                <TextView
                    android:id="@+id/textorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/nav_order"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageprofile"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/profile_icon" />

                <TextView
                    android:id="@+id/textprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/nav_profile"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>